WIP: Refactoring IHttpHandlerMock responsibility. * It now receives full HttpListenerContext allowing full customization around HttpListener * Simplified Request/Response handling is still there, but its now in Handler layer

--- a/src/HttpMockSlim/HttpMockSlim.csproj
+++ b/src/HttpMockSlim/HttpMockSlim.csproj
@@ -34,7 +34,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Handlers\FuncHandler.cs" />
+    <Compile Include="Handlers\SimpleFuncHandler.cs" />
     <Compile Include="HttpListener\HttpListenerServer.cs" />
     <Compile Include="HttpMock.cs" />
     <Compile Include="IHttpHandlerMock.cs" />
