--- a/src/HttpMockSlim/HttpMockSlim.csproj
+++ b/src/HttpMockSlim/HttpMockSlim.csproj
@@ -42,6 +42,8 @@
     <Compile Include="Model\Request.cs" />
     <Compile Include="Model\Response.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Memset.cs" />
+    <Compile Include="Utils\StreamGenerator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
