--- a/tests/HttpMockSlim.Playground/HttpMockSlim.Playground.csproj
+++ b/tests/HttpMockSlim.Playground/HttpMockSlim.Playground.csproj
@@ -37,8 +37,11 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Handlers\AnotherLowLevelExample.cs" />
+    <Compile Include="Handlers\FakeStorageHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Handlers\SwiftAuthMock.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
