GZip support feature review: DecompressGZip: * Split responsibility. * Removed 1024 byte buffer limitation. SimpleFuncHandler: * Cleaner code.

--- a/src/HttpMockSlim/HttpMockSlim.csproj
+++ b/src/HttpMockSlim/HttpMockSlim.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\ByteArrayExtensions.cs" />
+    <Compile Include="Extensions\HttpListenerRequestExtensions.cs" />
     <Compile Include="Extensions\StreamExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Handlers\FilteredHandlerWrapper.cs" />
