--- a/src/HttpMockSlim/HttpMockSlim.csproj
+++ b/src/HttpMockSlim/HttpMockSlim.csproj
@@ -1,65 +1,41 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BB0E3C69-7763-4121-86C2-B94E8396C5FF}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HttpMockSlim</RootNamespace>
-    <AssemblyName>HttpMockSlim</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>Viki.HttpMockSlim</PackageId>
+    <Authors>Vytautas Klumbys</Authors>
+    <Company />
+    <Product />
+    <Description>Created to be used in internal load-tests to mock some http services
+Developed with these requirements in mind:
+* No admin-rights necessary
+* No dependencies on other nugets
+* Concurrency
+* Easy to mock responses with funcs or with custom IHttpHandlerMock
+Cons:
+* It is small, so only simplified handler exists - which supports mocking StatusCode/ContentType/ResponseBody.
+* Advanced features require implementing IHttpHandlerMock and handling HttpListenerContext.</Description>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/Vycka/HttpMockSlim</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Vycka/HttpMockSlim</RepositoryUrl>
+    <PackageReleaseNotes>Porting to .NET Standard</PackageReleaseNotes>
+    <Version>2.0.0-preview</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.7.1" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
-    <Compile Include="Extensions\ByteArrayExtensions.cs" />
-    <Compile Include="Extensions\HttpListenerRequestExtensions.cs" />
-    <Compile Include="Extensions\StreamExtensions.cs" />
-    <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="Handlers\FilteredHandlerWrapper.cs" />
-    <Compile Include="Handlers\FilteredHandlerBase.cs" />
-    <Compile Include="Handlers\FuncHandler.cs" />
-    <Compile Include="Handlers\Internal\NotFoundResponseHandler.cs" />
-    <Compile Include="Handlers\SimpleFuncHandler.cs" />
-    <Compile Include="HttpListener\HttpListenerServer.cs" />
-    <Compile Include="HttpMock.cs" />
-    <Compile Include="IHttpHandlerMock.cs" />
-    <Compile Include="IHttpServer.cs" />
-    <Compile Include="Model\Request.cs" />
-    <Compile Include="Model\Response.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\Memset.cs" />
-    <Compile Include="Utils\StreamGenerator.cs" />
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
