--- a/tests/HttpMockSlim.LoadTest/App.config
+++ b/tests/HttpMockSlim.LoadTest/App.config
@@ -1,14 +1,29 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
 
   <system.net>
     <connectionManagement>
-      <add address="*" maxconnection="100" />
+      <add address="*" maxconnection="100"/>
       <!-- By default afaik is 2 -->
     </connectionManagement>
   </system.net>
   
+  <runtime>
+  
+       <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+  
+                 <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0"/>
+  
+            </dependentAssembly>
+  
+       </assemblyBinding>
+  
+  </runtime>
 </configuration>
