--- a/tests/HttpMockSlim.Playground/App.config
+++ b/tests/HttpMockSlim.Playground/App.config
@@ -1,12 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
 
     <system.net>
         <connectionManagement>
-            <add address="*" maxconnection="100" /> <!-- By default afaik is 2 -->
+            <add address="*" maxconnection="100"/> <!-- By default afaik is 2 -->
         </connectionManagement>
     </system.net>
   
