--- a/tests/HttpMockSlim.LoadTest/HttpMockSlim.LoadTest.csproj
+++ b/tests/HttpMockSlim.LoadTest/HttpMockSlim.LoadTest.csproj
@@ -45,11 +45,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Viki.LoadRunner.Engine, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Viki.LoadRunner.0.8.3-alpha\lib\net45\Viki.LoadRunner.Engine.dll</HintPath>
+    <Reference Include="Viki.LoadRunner.Engine, Version=0.8.79.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Viki.LoadRunner.0.8.79-beta\lib\netstandard2.0\Viki.LoadRunner.Engine.dll</HintPath>
     </Reference>
-    <Reference Include="Viki.LoadRunner.Tools, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Viki.LoadRunner.Tools.0.0.11-alpha\lib\net45\Viki.LoadRunner.Tools.dll</HintPath>
+    <Reference Include="Viki.LoadRunner.Tools, Version=0.8.49.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Viki.LoadRunner.Tools.0.8.49-alpha\lib\netstandard2.0\Viki.LoadRunner.Tools.dll</HintPath>
+    </Reference>
+    <Reference Include="Viki.LoadRunner.Tools.Legacy, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Viki.LoadRunner.Tools.Legacy.0.8.52-beta\lib\net471\Viki.LoadRunner.Tools.Legacy.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
